--- a/src/e_cidadania/apps/spaces/locale/es/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/spaces/locale/es/LC_MESSAGES/django.po
@@ -2,100 +2,101 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-02-14 20:22+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2011-02-15 09:57\n"
+"Last-Translator: <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Translated-Using: django-rosetta 0.5.6\n"
 
 #: admin.py:49
 msgid "Appearance"
-msgstr ""
+msgstr "Apariencia"
 
 #: admin.py:52
 msgid "Modules"
-msgstr ""
+msgstr "Módulos"
 
 #: models.py:32 models.py:68
 msgid "Name"
-msgstr ""
+msgstr "Nombre"
 
 #: models.py:33
 msgid "All lowercase. Obligatory."
-msgstr ""
+msgstr "Todo en minúsculas. Obligatorio."
 
 #: models.py:34
 msgid "Description"
-msgstr ""
+msgstr "Descripción"
 
 #: models.py:36 models.py:87
 msgid "Author"
-msgstr ""
+msgstr "Autor"
 
 #: models.py:39
 msgid "Logotype"
-msgstr ""
+msgstr "Logotipo"
 
 #: models.py:40
 msgid "100px width, 75px height"
-msgstr ""
+msgstr "100px de ancho, altura 75 px"
 
 #: models.py:42
 msgid "Banner"
-msgstr ""
+msgstr "Banner"
 
 #: models.py:43
 msgid "75px height"
-msgstr ""
+msgstr "altura de 75 px"
 
 #: models.py:45
 msgid "Authorized groups"
-msgstr ""
+msgstr "Grupos autorizados"
 
 #: models.py:49
 msgid "Debate module"
-msgstr ""
+msgstr "Módulo de debate"
 
 #: models.py:50
 msgid "Proposals module"
-msgstr ""
+msgstr "Módulo de propuestas"
 
 #: models.py:51
 msgid "News module"
-msgstr ""
+msgstr "Módulo de noticias"
 
 #: models.py:52
 msgid "Calendar module"
-msgstr ""
+msgstr "Módulo de calendario"
 
 #: models.py:53
 msgid "Documents module"
-msgstr ""
+msgstr "Módulo de documentos"
 
 #: models.py:57
 msgid "Spaces"
-msgstr ""
+msgstr "Espacios"
 
 #: models.py:73
 msgid "Entities"
-msgstr ""
+msgstr "Entidades"
 
 #: models.py:83
 msgid "Document title"
-msgstr ""
+msgstr "Título del documento"
 
 #: templates/spaces/add.html:4
 msgid "E-Cidadania Index"
-msgstr ""
+msgstr "e-cidadania Indice"
 
 #: templates/spaces/index.html:4
 msgid "Index"
-msgstr ""
+msgstr "Índice"
