--- a/src/e_cidadania/apps/proposals/locale/es/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/proposals/locale/es/LC_MESSAGES/django.po
@@ -2,56 +2,57 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-02-14 20:21+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2011-02-15 09:57\n"
+"Last-Translator: <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Translated-Using: django-rosetta 0.5.6\n"
 
 #: forms.py:38 models.py:42
 msgid "Title"
-msgstr ""
+msgstr "Título"
 
 #: forms.py:39 models.py:43
 msgid "Message"
-msgstr ""
+msgstr "Mensaje"
 
 #: forms.py:42 models.py:58
 msgid "Latitude"
-msgstr ""
+msgstr "Latitud"
 
 #: forms.py:44 models.py:60
 msgid "Longitude"
-msgstr ""
+msgstr "Longitud"
 
 #: models.py:32
 msgid "Economically not viable"
-msgstr ""
+msgstr "Económicamente no es viable"
 
 #: models.py:33
 msgid "Legally not viable"
-msgstr ""
+msgstr "Legalmente no es viable"
 
 #: models.py:34
 msgid "Technically not viable"
-msgstr ""
+msgstr "Técnicamente no es viable"
 
 #: templates/proposals/add_proposal.html:4
 msgid "Add proposal"
-msgstr ""
+msgstr "Añadir propuesta"
 
 #: templates/proposals/list_proposals.html:4
 msgid "View proposals"
-msgstr ""
+msgstr "Ver las propuestas"
 
 #: templates/proposals/list_proposals.html:15
 msgid "proposed by "
-msgstr ""
+msgstr "propuesto por"
