--- a/src/e_cidadania/apps/swingtime/locale/es/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/swingtime/locale/es/LC_MESSAGES/django.po
@@ -2,325 +2,326 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-02-14 20:23+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2011-02-15 10:03\n"
+"Last-Translator: <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Translated-Using: django-rosetta 0.5.6\n"
 
 #: forms.py:17
 msgid "Sun"
-msgstr ""
+msgstr "Dom"
 
 #: forms.py:18
 msgid "Mon"
-msgstr ""
+msgstr "Lun"
 
 #: forms.py:19
 msgid "Tue"
-msgstr ""
+msgstr "Mar"
 
 #: forms.py:20
 msgid "Wed"
-msgstr ""
+msgstr "Mie"
 
 #: forms.py:21
 msgid "Thu"
-msgstr ""
+msgstr "Jue"
 
 #: forms.py:22
 msgid "Fri"
-msgstr ""
+msgstr "Vie"
 
 #: forms.py:23
 msgid "Sat"
-msgstr ""
+msgstr "Sab"
 
 #: forms.py:27
 msgid "Sunday"
-msgstr ""
+msgstr "Domingo"
 
 #: forms.py:28
 msgid "Monday"
-msgstr ""
+msgstr "Lunes"
 
 #: forms.py:29
 msgid "Tuesday"
-msgstr ""
+msgstr "Martes"
 
 #: forms.py:30
 msgid "Wednesday"
-msgstr ""
+msgstr "Miércoles"
 
 #: forms.py:31
 msgid "Thursday"
-msgstr ""
+msgstr "Jueves"
 
 #: forms.py:32
 msgid "Friday"
-msgstr ""
+msgstr "Viernes"
 
 #: forms.py:33
 msgid "Saturday"
-msgstr ""
+msgstr "Sábado"
 
 #: forms.py:37
 msgid "January"
-msgstr ""
+msgstr "Enero"
 
 #: forms.py:38
 msgid "February"
-msgstr ""
+msgstr "Febrero"
 
 #: forms.py:39
 msgid "March"
-msgstr ""
+msgstr "Marzo"
 
 #: forms.py:40
 msgid "April"
-msgstr ""
+msgstr "Abril"
 
 #: forms.py:41 forms.py:56
 msgid "May"
-msgstr ""
+msgstr "Mayo"
 
 #: forms.py:42
 msgid "June"
-msgstr ""
+msgstr "Junio"
 
 #: forms.py:43
 msgid "July"
-msgstr ""
+msgstr "Julio"
 
 #: forms.py:44
 msgid "August"
-msgstr ""
+msgstr "Agosto"
 
 #: forms.py:45
 msgid "September"
-msgstr ""
+msgstr "Septiembre"
 
 #: forms.py:46
 msgid "October"
-msgstr ""
+msgstr "Octubre"
 
 #: forms.py:47
 msgid "November"
-msgstr ""
+msgstr "Noviembre"
 
 #: forms.py:48
 msgid "December"
-msgstr ""
+msgstr "Diciembre"
 
 #: forms.py:52
 msgid "Jan"
-msgstr ""
+msgstr "Ene"
 
 #: forms.py:53
 msgid "Feb"
-msgstr ""
+msgstr "Feb"
 
 #: forms.py:54
 msgid "Mar"
-msgstr ""
+msgstr "Mar"
 
 #: forms.py:55
 msgid "Apr"
-msgstr ""
+msgstr "Abr"
 
 #: forms.py:57
 msgid "Jun"
-msgstr ""
+msgstr "Jun"
 
 #: forms.py:58
 msgid "Jul"
-msgstr ""
+msgstr "Jul"
 
 #: forms.py:59
 msgid "Aug"
-msgstr ""
+msgstr "Ago"
 
 #: forms.py:60
 msgid "Sep"
-msgstr ""
+msgstr "Sep"
 
 #: forms.py:61
 msgid "Oct"
-msgstr ""
+msgstr "Oct"
 
 #: forms.py:62
 msgid "Nov"
-msgstr ""
+msgstr "Nov"
 
 #: forms.py:63
 msgid "Dec"
-msgstr ""
+msgstr "Dic"
 
 #: forms.py:68
 msgid "first"
-msgstr ""
+msgstr "primero"
 
 #: forms.py:69
 msgid "second"
-msgstr ""
+msgstr "segundo"
 
 #: forms.py:70
 msgid "third"
-msgstr ""
+msgstr "tercero"
 
 #: forms.py:71
 msgid "fourth"
-msgstr ""
+msgstr "cuarto"
 
 #: forms.py:72
 msgid "last"
-msgstr ""
+msgstr "pasado"
 
 #: forms.py:76
 msgid "Day(s)"
-msgstr ""
+msgstr "Día (s)"
 
 #: forms.py:77
 msgid "Week(s)"
-msgstr ""
+msgstr "Semana (s)"
 
 #: forms.py:78
 msgid "Month(s)"
-msgstr ""
+msgstr "Mes (es)"
 
 #: forms.py:79
 msgid "Year(s)"
-msgstr ""
+msgstr "Año (s)"
 
 #: forms.py:83
 msgid "By count"
-msgstr ""
+msgstr "Al contar con"
 
 #: forms.py:84
 msgid "Until date"
-msgstr ""
+msgstr "Hasta la fecha de"
 
 #: forms.py:207
 msgid "Date"
-msgstr ""
+msgstr "Fecha"
 
 #: forms.py:213
 msgid "Start time"
-msgstr ""
+msgstr "Hora de inicio"
 
 #: forms.py:218
 msgid "End time"
-msgstr ""
+msgstr "Hora de finalización"
 
 #: forms.py:226
 msgid "Occurrences"
-msgstr ""
+msgstr "Ocurrencias"
 
 #: forms.py:231
 msgid "Total Occurrences"
-msgstr ""
+msgstr "Total de ocurrencias"
 
 #: forms.py:244
 msgid "Frequency"
-msgstr ""
+msgstr "Frecuencia"
 
 #: forms.py:258
 msgid "Weekly options"
-msgstr ""
+msgstr "Semanal opciones"
 
 #: forms.py:264
 msgid "On the"
-msgstr ""
+msgstr "En el"
 
 #: forms.py:264
 msgid "Each:"
-msgstr ""
+msgstr "Cada uno:"
 
 #: forms.py:267
 msgid "Monthly options"
-msgstr ""
+msgstr "Opciones mensuales"
 
 #: forms.py:280
 msgid "Yearly options"
-msgstr ""
+msgstr "Opciones anuales"
 
 #: forms.py:377
 #, python-format
 msgid "Unknown interval rule %s"
-msgstr ""
+msgstr "Norma de intervalo desconocida: %s"
 
 #: models.py:27 models.py:36
 msgid "note"
-msgstr ""
+msgstr "nota"
 
 #: models.py:28
 msgid "created"
-msgstr ""
+msgstr "creado"
 
 #: models.py:30
 msgid "content type"
-msgstr ""
+msgstr "tipo de contenido"
 
 #: models.py:31
 msgid "object id"
-msgstr ""
+msgstr "Identificación del objeto"
 
 #: models.py:37 models.py:71 models.py:185
 msgid "notes"
-msgstr ""
+msgstr "notas"
 
 #: models.py:50
 msgid "abbreviation"
-msgstr ""
+msgstr "abreviación"
 
 #: models.py:51
 msgid "label"
-msgstr ""
+msgstr "etiqueta"
 
 #: models.py:55 models.py:70
 msgid "event type"
-msgstr ""
+msgstr "tipo de evento"
 
 #: models.py:56
 msgid "event types"
-msgstr ""
+msgstr "tipos de eventos"
 
 #: models.py:68
 msgid "title"
-msgstr ""
+msgstr "título"
 
 #: models.py:69
 msgid "description"
-msgstr ""
+msgstr "descripción"
 
 #: models.py:75 models.py:184
 msgid "event"
-msgstr ""
+msgstr "evento"
 
 #: models.py:76
 msgid "events"
-msgstr ""
+msgstr "eventos"
 
 #: models.py:182
 msgid "start time"
-msgstr ""
+msgstr "hora de inicio"
 
 #: models.py:183
 msgid "end time"
-msgstr ""
+msgstr "finaliza el"
 
 #: models.py:191
 msgid "occurrence"
-msgstr ""
+msgstr "ocurrencia"
 
 #: models.py:192
 msgid "occurrences"
-msgstr ""
+msgstr "ocurrencias"
