--- a/src/e_cidadania/templates/locale/es/LC_MESSAGES/django.po
+++ b/src/e_cidadania/templates/locale/es/LC_MESSAGES/django.po
@@ -8,10 +8,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-02-17 11:17+0100\n"
+"POT-Creation-Date: 2011-03-09 18:33+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -25,134 +26,104 @@ msgstr ""
 "Una meiga nosha robado la página, mejor que no te metas con ella. Para ello "
 "te damos una salida"
 
-#: menu.html:4 menu.html.py:33
+#: base.html:74
+msgid "created by"
+msgstr "creado por"
+
+#: base.html:75
+msgid ""
+"We guarantee that this program will not become aware and take over the world"
+msgstr ""
+"Garantizamos que este programa no tomará conciencia y se apoderará del mundo"
+
+#: menu.html:4 menu.html.py:36
 msgid "Home"
 msgstr "Inicio"
 
-#: menu.html:6 menu.html.py:35
-msgid "Language"
-msgstr "Idioma"
-
-#: menu.html:23
+#: menu.html:25
 msgid "Administration"
 msgstr "Administración"
 
-#: menu.html:25
+#: menu.html:26
+msgid "Translation"
+msgstr "Traducción"
+
+#: menu.html:28
 msgid "Messages"
 msgstr "Mensajes"
 
-#: menu.html:26
+#: menu.html:29
 msgid "Edit profile"
 msgstr "Editar perfil"
 
-#: menu.html:27
+#: menu.html:30
 msgid "Logout"
 msgstr "Salir"
 
-#: menu.html:34
+#: menu.html:37
 msgid "Login"
 msgstr "Entrar"
+
+#: menu.html:38
+msgid "Language"
+msgstr "Idioma"
 
 #: site_index.html:4
 msgid "e-cidadania"
 msgstr "e-cidadania"
 
-#: site_index.html:34
+#: site_index.html:13
+msgid "Add news"
+msgstr "Agregar noticia"
+
+#: site_index.html:32
 msgid "Written by"
 msgstr "Escrito por"
 
-#: site_index.html:34
+#: site_index.html:32
 msgid "on"
 msgstr "el"
 
-#: site_index.html:39
+#: site_index.html:37
 msgid "Nothing published yet."
 msgstr "No hay nada publicado todavía."
 
-#: site_index.html:63
+#: site_index.html:52
+msgid "Create your own space"
+msgstr "Crea tu propio espacio"
+
+#: site_index.html:52
+msgid "inside e-cidadania"
+msgstr "en e-cidadania"
+
+#: site_index.html:56
+msgid "Spaces list"
+msgstr "Lista de espacios"
+
+#: site_index.html:62
 msgid "No spaces"
 msgstr "No hay espacios"
 
-#, fuzzy
-#~ msgid "Login again"
-#~ msgstr "Entrar"
+#: site_index.html:65
+msgid "Go"
+msgstr "Ir"
 
-#, fuzzy
-#~ msgid "Message"
-#~ msgstr "Mensajes"
+#: site_index.html:70
+msgid "Recently updated spaces"
+msgstr "Espacios actualizados recientemente"
 
-#, fuzzy
-#~ msgid "registration profile"
-#~ msgstr "Editar perfil"
+#: site_index.html:78
+msgid "e-cidadania development"
+msgstr "Desarrollo de e-cidadania"
 
-#, fuzzy
-#~ msgid "registration profiles"
-#~ msgstr "Editar perfil"
+#: site_index.html:79
+msgid "Do you want to help?"
+msgstr "¿Quieres ayudar?"
 
-#, fuzzy
-#~ msgid "Log in"
-#~ msgstr "Entrar"
+#: site_index.html:79
+msgid "Access"
+msgstr "Accede"
 
-#, fuzzy
-#~ msgid "Logged out"
-#~ msgstr "Salir"
-
-#, fuzzy
-#~ msgid "Language selection"
-#~ msgstr "Idioma"
-
-#, fuzzy
-#~ msgid "Logotype"
-#~ msgstr "Salir"
-
-#, fuzzy
-#~ msgid "Spaces"
-#~ msgstr "No hay espacios"
-
-#, fuzzy
-#~ msgid "E-Cidadania Index"
-#~ msgstr "e-cidadania"
-
-#, fuzzy
-#~ msgid "Mon"
-#~ msgstr "el"
-
-#, fuzzy
-#~ msgid "Togo"
-#~ msgstr "Salir"
-
-#, fuzzy
-#~ msgid "%s's profile"
-#~ msgstr "Editar perfil"
-
-#, fuzzy
-#~ msgid "Location"
-#~ msgstr "Entrar"
-
-#, fuzzy
-#~ msgid "Remove profile"
-#~ msgstr "Editar perfil"
-
-#, fuzzy
-#~ msgid "Done"
-#~ msgstr "el"
-
-#, fuzzy
-#~ msgid "Edit personal data"
-#~ msgstr "Editar perfil"
-
-#, fuzzy
-#~ msgid "Delete profile"
-#~ msgstr "Editar perfil"
-
-#, fuzzy
-#~ msgid "Public profile"
-#~ msgstr "Editar perfil"
-
-#, fuzzy
-#~ msgid "Not set yet"
-#~ msgstr "No hay nada publicado todavía."
-
-#, fuzzy
-#~ msgid "Not set"
-#~ msgstr "No hay espacios"
+#: site_index.html:88
+msgid "Main page footer"
+msgstr "Pie de página para la página principal"
