--- a/src/e_cidadania/apps/news/locale/es/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/news/locale/es/LC_MESSAGES/django.po
@@ -3,15 +3,15 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-02-17 11:07+0100\n"
+"POT-Creation-Date: 2011-03-17 13:36+0100\n"
 "PO-Revision-Date: 2011-02-15 09:58\n"
 "Last-Translator: <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -21,11 +21,13 @@ msgstr ""
 msgid "Other data"
 msgstr "Otros datos"
 
-#: models.py:35
+#: models.py:35 templates/news/add_post.html:21
+#: templates/news/add_post.html.py:64
 msgid "Title"
 msgstr "Título"
 
-#: models.py:36
+#: models.py:36 templates/news/add_post.html:28
+#: templates/news/add_post.html.py:65
 msgid "Text"
 msgstr "Texto"
 
@@ -41,14 +43,76 @@ msgstr "Última actualización"
 msgid "Author"
 msgstr "Autor"
 
-#: models.py:40
+#: models.py:41 templates/news/add_post.html:42
 msgid "Publish in index page"
 msgstr "Publicar en la página de inicio"
 
-#: models.py:41
+#: models.py:42
 msgid "Publish in"
 msgstr "Publicar en"
 
-#: models.py:42
+#: models.py:44
 msgid "If you want to post to the index leave this blank"
 msgstr "Si desea publicar en el índice deje esto en blanco."
+
+#: templates/news/add_post.html:4 templates/news/add_post.html.py:11
+msgid "Add new post"
+msgstr "Agregar nueva noticia"
+
+#: templates/news/add_post.html:35 templates/news/add_post.html.py:66
+msgid "Tags"
+msgstr "Etiquetas"
+
+#: templates/news/add_post.html:50 templates/news/edit_post.html:18
+msgid "Create"
+msgstr "Crear"
+
+#: templates/news/add_post.html:52 templates/news/delete_post.html:16
+#: templates/news/edit_post.html:19
+msgid "Go back"
+msgstr "Volver"
+
+#: templates/news/add_post.html:62
+msgid "How to add new posts"
+msgstr "Como añadir nuevas noticias"
+
+#: templates/news/add_post.html:64
+msgid "An spectacular title! (100 characters)"
+msgstr "¡Un título espectacular! (100 caracteres)"
+
+#: templates/news/add_post.html:65
+msgid "Your story."
+msgstr "Tu historia."
+
+#: templates/news/add_post.html:66
+msgid "Please use them carefully, you are limited to 4 tags."
+msgstr "Por favor, utilízalas adecuadamente, estáslimitado a 4 etiquetas."
+
+#: templates/news/add_post.html:67
+msgid "Publish in index"
+msgstr "Publicar en la página de inicio"
+
+#: templates/news/add_post.html:67
+msgid ""
+"If you mark this, the post will appear in the spaces index page AND in the "
+"main index."
+msgstr "Si marcas esto, tu noticia aparecerá en tu índice del espacio Y en "
+"el índice general."
+
+#: templates/news/delete_post.html:4
+msgid "Delete news"
+msgstr "Borrar noticias"
+
+#: templates/news/delete_post.html:13
+msgid ""
+"Are you sure you want to delete this post? This action cannot be undone."
+msgstr "¿Estás seguro de que quieres borrar esta noticia? Esta acción no se "
+"puede deshacer"
+
+#: templates/news/delete_post.html:15
+msgid "Delete"
+msgstr "Eliminar"
+
+#: templates/news/edit_post.html:4
+msgid "Edit news"
+msgstr "Editar noticias"
