Minor fix in ES string

--- a/src/e_cidadania/apps/spaces/locale/es/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/spaces/locale/es/LC_MESSAGES/django.po
@@ -274,7 +274,7 @@ msgstr "Propuestas recientes"
 
 #: templates/spaces/index.html:86
 msgid "No proposals available"
-msgstr "Sin documentos"
+msgstr "Sin propuestas"
 
 #: templates/spaces/index.html:89
 msgid "View all proposals"
