Updated galician translations

--- a/src/e_cidadania/apps/accounts/locale/gl/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/accounts/locale/gl/LC_MESSAGES/django.po
@@ -2,15 +2,15 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-02-17 11:06+0100\n"
-"PO-Revision-Date: 2011-02-17 10:49\n"
-"Last-Translator: <a@a.com>\n"
+"POT-Creation-Date: 2011-03-16 09:59-0700\n"
+"PO-Revision-Date: 2011-03-18 18:28\n"
+"Last-Translator: Cidadania S. Coop. <cidadania@cidadania.coop>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -95,19 +95,15 @@ msgstr "Entrar"
 
 #: templates/accounts/login.html:14
 msgid "Username:"
-msgstr "Nome de usuario:"
+msgstr "Nome de usuario/usuaria"
 
 #: templates/accounts/login.html:17
 msgid "Password:"
 msgstr "Contrasinal:"
 
 #: templates/accounts/logout.html:7
-msgid ""
-"Thanks for using e-cidadania. Now you can continue visting the website or "
-"log in again."
-msgstr ""
-"Grazas por usar o e-cidadanía. Agora podes continuar visitando o sitio web "
-"ou entrar de novo."
+msgid "Thanks for using e-cidadania. Now you can continue visting the website or log in again."
+msgstr "Grazas por usar o e-cidadanía. Agora podes continuar visitando o sitio web ou entrar de novo."
 
 #: templates/accounts/logout.html:9
 msgid "Login again"
@@ -115,4 +111,4 @@ msgstr "Entrar de novo"
 
 #: templates/accounts/profile.html:5
 msgid "User"
-msgstr "Usuario"
+msgstr "Usuario/usuaria"
