--- a/src/e_cidadania/apps/debate/locale/gl/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/debate/locale/gl/LC_MESSAGES/django.po
@@ -2,36 +2,37 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-02-17 11:06+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2011-03-16 10:01-0700\n"
+"PO-Revision-Date: 2011-03-18 18:02\n"
+"Last-Translator: Cidadania S. Coop. <cidadania@cidadania.coop>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Translated-Using: django-rosetta 0.5.6\n"
 
-#: models.py:33 models.py:47
+#: models.py:33 models.py:48
 msgid "Title"
-msgstr ""
+msgstr "Título"
 
 #: models.py:34
 msgid "Objectives"
-msgstr ""
+msgstr "Obxectivos"
 
-#: models.py:35 models.py:48
+#: models.py:35 models.py:49
 msgid "Description"
-msgstr ""
-
-#: models.py:61
-msgid "Message"
-msgstr ""
+msgstr "Descrición"
 
 #: models.py:62
+msgid "Message"
+msgstr "Mensaxe"
+
+#: models.py:63
 msgid "Explanation"
-msgstr ""
+msgstr "Explicación"
