--- a/src/e_cidadania/apps/news/locale/gl/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/news/locale/gl/LC_MESSAGES/django.po
@@ -2,15 +2,15 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-02-17 11:07+0100\n"
-"PO-Revision-Date: 2011-02-17 10:48\n"
-"Last-Translator: <a@a.com>\n"
+"POT-Creation-Date: 2011-03-16 10:03-0700\n"
+"PO-Revision-Date: 2011-03-18 18:26\n"
+"Last-Translator: Cidadania S. Coop. <cidadania@cidadania.coop>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,11 +21,11 @@ msgstr ""
 msgid "Other data"
 msgstr "Outros datos"
 
-#: models.py:35
+#: models.py:35 templates/news/add_post.html:17
 msgid "Title"
 msgstr "Título"
 
-#: models.py:36
+#: models.py:36 templates/news/add_post.html:24
 msgid "Text"
 msgstr "Texto"
 
@@ -39,16 +39,45 @@ msgstr "Última actualización"
 
 #: models.py:39
 msgid "Author"
-msgstr "Autor"
+msgstr "Autoría"
 
-#: models.py:40
+#: models.py:41 templates/news/add_post.html:31
 msgid "Publish in index page"
 msgstr "Publicar na páxina do índice"
 
-#: models.py:41
+#: models.py:42
 msgid "Publish in"
 msgstr "Publicar en"
 
-#: models.py:42
+#: models.py:44
 msgid "If you want to post to the index leave this blank"
-msgstr "Se quere publicar o índice de deixalo en branco"
+msgstr "Se queres publicar no índice déixao en branco"
+
+#: templates/news/add_post.html:4
+msgid "Create new space"
+msgstr "Crear un novo espazo"
+
+#: templates/news/add_post.html:39 templates/news/edit_post.html:18
+msgid "Create"
+msgstr "Crear"
+
+#: templates/news/add_post.html:41 templates/news/delete_post.html:16
+#: templates/news/edit_post.html:19
+msgid "Go back"
+msgstr "Volver"
+
+#: templates/news/delete_post.html:4
+msgid "Delete news"
+msgstr "Borrar noticias"
+
+#: templates/news/delete_post.html:13
+msgid "Are you sure you want to delete this post? This action cannot be undone."
+msgstr "Estás seguro/segura de querer borrar esta mensaxe? Esta acción non se pode desfacer."
+
+#: templates/news/delete_post.html:15
+msgid "Delete"
+msgstr "Borrar"
+
+#: templates/news/edit_post.html:4
+msgid "Edit news"
+msgstr "Editar noticias"
