--- a/src/e_cidadania/apps/spaces/locale/gl/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/spaces/locale/gl/LC_MESSAGES/django.po
@@ -2,15 +2,15 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-02-17 11:07+0100\n"
-"PO-Revision-Date: 2011-02-17 10:47\n"
-"Last-Translator: <a@a.com>\n"
+"POT-Creation-Date: 2011-03-16 10:07-0700\n"
+"PO-Revision-Date: 2011-03-18 18:22\n"
+"Last-Translator: Cidadania S. Coop. <cidadania@cidadania.coop>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,9 +19,9 @@ msgstr ""
 
 #: admin.py:49
 msgid "Appearance"
-msgstr "Aparencia"
+msgstr "Apariencia"
 
-#: admin.py:52
+#: admin.py:52 templates/spaces/add.html:38
 msgid "Modules"
 msgstr "Módulos"
 
@@ -39,9 +39,9 @@ msgstr "Descrición"
 
 #: models.py:36 models.py:87
 msgid "Author"
-msgstr "Autor"
+msgstr "Autor/autora"
 
-#: models.py:39 templates/spaces/add.html:26
+#: models.py:39 templates/spaces/add.html:25
 msgid "Logotype"
 msgstr "Logotipo"
 
@@ -49,7 +49,7 @@ msgstr "Logotipo"
 msgid "100px width, 75px height"
 msgstr "ancho de 100px, altura 75px"
 
-#: models.py:42 templates/spaces/add.html:31
+#: models.py:42 templates/spaces/add.html:29
 msgid "Banner"
 msgstr "Banner"
 
@@ -59,21 +59,21 @@ msgstr "altura 75px"
 
 #: models.py:45
 msgid "Authorized groups"
-msgstr "Grupos autorizados"
+msgstr "Grupos persoas autorizadas"
 
-#: models.py:49 templates/spaces/add.html:44
+#: models.py:49
 msgid "Debate module"
 msgstr "Módulo de debate"
 
-#: models.py:50 templates/spaces/add.html:49
+#: models.py:50
 msgid "Proposals module"
 msgstr "Módulo de propostas"
 
-#: models.py:51 templates/spaces/add.html:54
+#: models.py:51
 msgid "News module"
 msgstr "Módulo de noticias"
 
-#: models.py:52 templates/spaces/add.html:59
+#: models.py:52
 msgid "Calendar module"
 msgstr "Módulo de calendario"
 
@@ -93,38 +93,152 @@ msgstr "Entidades"
 msgid "Document title"
 msgstr "Título do documento"
 
-#: templates/spaces/add.html:4
-msgid "E-Cidadania Index"
-msgstr "Índice de e-cidadanía"
+#: templates/spaces/add.html:4 templates/spaces/delete.html:4
+msgid "Create new space"
+msgstr "Crear un novo espazo"
 
 #: templates/spaces/add.html:16
-#, fuzzy
 msgid "Space name"
-msgstr "Espazos"
+msgstr "Nome dos espazos"
 
-#: templates/spaces/add.html:36
-#, fuzzy
-msgid "authorized_groups"
+#: templates/spaces/add.html:33
+msgid "Authorized Groups"
 msgstr "Grupos autorizados"
 
-#: templates/spaces/add.html:64
-#, fuzzy
-msgid "Documentation module"
-msgstr "Módulo de documentos"
+#: templates/spaces/add.html:41
+msgid "Debate"
+msgstr "Debate"
 
-#: templates/spaces/add.html:70
+#: templates/spaces/add.html:42
+msgid "Proposals"
+msgstr "Propostas"
+
+#: templates/spaces/add.html:43
+msgid "News"
+msgstr "Noticias"
+
+#: templates/spaces/add.html:44 templates/spaces/index.html:72
+msgid "Calendar"
+msgstr "Calendario"
+
+#: templates/spaces/add.html:45
+msgid "Documentation"
+msgstr "Documentación"
+
+#: templates/spaces/add.html:52 templates/spaces/edit.html:18
+#: templates/spaces/edit_doc.html:18
 msgid "Create"
-msgstr ""
+msgstr "Crear"
 
-#: templates/spaces/add.html:71
+#: templates/spaces/add.html:54 templates/spaces/add_doc.html:34
+#: templates/spaces/delete.html:16 templates/spaces/delete_doc.html:16
+#: templates/spaces/edit.html:19 templates/spaces/edit_doc.html:19
+#: templates/spaces/list_docs.html:16
 msgid "Go back"
-msgstr ""
+msgstr "Regresar"
+
+#: templates/spaces/add_doc.html:4
+msgid "Upload new document"
+msgstr "Cargar un novo documento"
+
+#: templates/spaces/add_doc.html:17
+msgid "Title"
+msgstr "Título"
+
+#: templates/spaces/add_doc.html:24
+msgid "Select your file"
+msgstr "Selecciona o teu arquivo"
+
+#: templates/spaces/add_doc.html:32
+msgid "Upload"
+msgstr "Subir"
+
+#: templates/spaces/delete.html:13
+msgid "Are you sure you want to delete this space? This action cannot be undone."
+msgstr "Estás seguro/segura de que queres borrar este espazo? Esta acción non pode ser desfeita."
+
+#: templates/spaces/delete.html:15 templates/spaces/delete_doc.html:15
+msgid "Delete"
+msgstr "Borrar"
+
+#: templates/spaces/delete_doc.html:4
+msgid "Delete document"
+msgstr "Borrar documento"
+
+#: templates/spaces/delete_doc.html:13
+msgid "Are you sure you want to delete this document? This action cannot be undone."
+msgstr "Estás seguro/segura de querer eliminar este documento? Esta acción non se pode desfacer."
+
+#: templates/spaces/edit.html:4 templates/spaces/index.html:17
+msgid "Edit space"
+msgstr "Editar espazo"
+
+#: templates/spaces/edit_doc.html:4
+msgid "Edit document"
+msgstr "Editar documento"
 
 #: templates/spaces/index.html:4
 msgid "Index"
 msgstr "Índice"
 
-#: templates/spaces/index.html:39
-#, fuzzy
+#: templates/spaces/index.html:18
+msgid "Delete space"
+msgstr "Borrar espazo"
+
+#: templates/spaces/index.html:19
+msgid "Add news"
+msgstr "Engadir noticias"
+
+#: templates/spaces/index.html:33
+msgid "Written by"
+msgstr "Escrito por"
+
+#: templates/spaces/index.html:33
+msgid "on"
+msgstr "En"
+
+#: templates/spaces/index.html:37
+msgid "Nothing published yet."
+msgstr "Todavía non hai nada publicado"
+
+#: templates/spaces/index.html:49
+msgid "Documents"
+msgstr "Documentos"
+
+#: templates/spaces/index.html:60
 msgid "No documents available"
-msgstr "Título do documento"
+msgstr "Documentos non dispoñibles"
+
+#: templates/spaces/index.html:63
+msgid "View all documents"
+msgstr "Ver todos os documentos"
+
+#: templates/spaces/index.html:65
+msgid "Add documents"
+msgstr "Engadir documentos"
+
+#: templates/spaces/index.html:79
+msgid "Newest proposals"
+msgstr "Propostas máis recentes"
+
+#: templates/spaces/index.html:87
+msgid "View all proposals"
+msgstr "Ver todas as propostas"
+
+#: templates/spaces/index.html:89
+msgid "Add proposal"
+msgstr "Engadir proposta"
+
+#: templates/spaces/list_docs.html:4
+msgid "Document list"
+msgstr "Lista de documentos"
+
+#: templates/spaces/list_docs.html:14
+msgid "Published"
+msgstr "Publicado"
+
+#~ msgid "E-Cidadania Index"
+#~ msgstr "Índice de e-cidadanía"
+
+#~ msgid "authorized_groups"
+#~ msgstr "Grupos autorizados"
