--- a/src/e_cidadania/apps/news/locale/es/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/news/locale/es/LC_MESSAGES/django.po
@@ -2,20 +2,20 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-04-18 11:40+0200\n"
-"PO-Revision-Date: 2011-03-25 23:22\n"
-"Last-Translator: <a@a.com>\n"
+"PO-Revision-Date: 2011-04-18 12:14\n"
+"Last-Translator:   <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Translated-Using: django-rosetta 0.5.6\n"
+"Language: \n"
+"X-Translated-Using: django-rosetta 0.6.0\n"
 
 #: admin.py:39
 msgid "Other data"
@@ -96,11 +96,11 @@ msgstr "Publicar en la página de inicio"
 
 #: templates/news/post_add.html:69
 msgid ""
-"If you mark this, the post will appear in the spaces index page AND in the "
-"main index."
+"If you mark this, the post will appear in the spaces index page AND in "
+"the main index."
 msgstr ""
-"Si marcas esto, tu noticia aparecerá en tu índice del espacio Y en el índice "
-"general."
+"Si marcas esto, tu noticia aparecerá en tu índice del espacio Y en el "
+"índice general."
 
 #: templates/news/post_delete.html:4
 msgid "Delete news"
@@ -108,10 +108,11 @@ msgstr "Borrar noticias"
 
 #: templates/news/post_delete.html:13
 msgid ""
-"Are you sure you want to delete this post? This action cannot be undone."
+"Are you sure you want to delete this post? This action cannot be "
+"undone."
 msgstr ""
-"¿Estás seguro de que quieres borrar esta noticia? Esta acción no se puede "
-"deshacer"
+"¿Estás seguro de que quieres borrar esta noticia? Esta acción no se "
+"puede deshacer"
 
 #: templates/news/post_delete.html:15
 msgid "Delete"
@@ -130,6 +131,5 @@ msgid "Edit news"
 msgstr "Editar noticias"
 
 #: templates/news/post_edit.html:54
-#, fuzzy
 msgid "Publish in space"
-msgstr "Publicar en"
+msgstr "Publicar en espacio"
